[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "cfgparser"
version = "0.0.1"
authors = [
  { name="Gusman Dharma P", email="gusman.dp@gmail.com" },
]
description = "Another NOS config file parser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit",
    "loguru"
]

[project.scripts]
cfgparser = "cfgparser.ui.cmd:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "mypy",
    "coverage",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["cfgparser"]
